# ajora

./: .gitignore  Cargo.toml  README.md  TESTING.md
agent/: .env.example  package-lock.json  package.json  tsconfig.json
agent/src/: agent.ts  executor.ts  index.ts  stellar.ts  telegram.ts  tools.ts  types.ts
circuits/ajora_credit/: Prover.toml
contracts/reputation/: Cargo.toml
contracts/reputation/src/: events.rs  lib.rs  storage.rs  validation.rs
contracts/reputation/tests/: test_reputation.rs
contracts/rotating_savings/: Cargo.toml
contracts/rotating_savings/src/: cycle.rs  events.rs  lib.rs  reputation_client.rs  storage.rs  validation.rs
contracts/rotating_savings/tests/: test_contributions.rs  test_create_group.rs  test_defaults.rs  test_join_group.rs  test_payout.rs  test_reputation_integration.rs  test_zk_commitment.rs
contracts/target_savings/: Cargo.toml
contracts/target_savings/src/: cycle.rs  events.rs  lib.rs  storage.rs  validation.rs
contracts/target_savings/tests/: test_contributions.rs  test_defaults.rs  test_pool_lifecycle.rs  test_withdrawal.rs
contracts/zk_verifier/: Cargo.toml
contracts/zk_verifier/src/: events.rs  lib.rs  storage.rs  verifier.rs
contracts/zk_verifier/tests/: test_check_credit.rs  test_initialization.rs  test_submit_verified_proof.rs
frontend/: .env.local.example  .gitignore  README.md  fund-demo.js  next.config.ts  package-lock.json  package.json
frontend/public/circuits/: ajora_credit.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/api/zk/prove/: route.ts
frontend/src/app/backup/activate/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/backup/: page.tsx
frontend/src/app/dashboard/groups/: page.tsx
frontend/src/app/dashboard/proof/: page.tsx
frontend/src/app/dashboard/savings/: page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/components/: AjoraLogo.tsx  Sidebar.tsx
frontend/src/context/: WalletContext.tsx
frontend/src/lib/: contracts.ts  errors.ts  faucet.ts  passkey.ts  registry.ts  soroban.ts
scripts/: build_circuits.sh  deploy.js  deploy.sh  fund-demo.js  redeploy-rotating.js
zk-server/: Dockerfile  nixpacks.toml  package-lock.json  package.json
zk-server/circuits/ajora_credit/: Nargo.toml
zk-server/circuits/src/: main.nr
zk-server/src/: index.ts
