[workspace]
resolver = "2"
members = [
    "contracts/rotating_savings",
    "contracts/target_savings",
    "contracts/zk_verifier",
]

[workspace.dependencies]
soroban-sdk = { version = "22.0.1" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
