[package]
name = "target-savings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[[test]]
name = "test_pool_lifecycle"
path = "tests/test_pool_lifecycle.rs"

[[test]]
name = "test_contributions"
path = "tests/test_contributions.rs"

[[test]]
name = "test_withdrawal"
path = "tests/test_withdrawal.rs"

[[test]]
name = "test_defaults"
path = "tests/test_defaults.rs"
